# pathway-rfp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_ingredient_prices_pricing_columns.py  0003_rfp_recipient.py  0004_phase6_inbox.py  _autogen_0002_raw.py.txt  _autogen_raw.py.txt
backend/app/: cli.py  config.py  db.py  logging.py  main.py
backend/app/llm/: __init__.py  client.py  tools.py  usage.py
backend/app/models/: __init__.py  base.py  dish.py  dish_ingredient.py  distributor.py  imap_seen_uid.py  ingredient.py  ingredient_price.py  llm_usage.py  quote.py  recommendation.py  restaurant.py  rfp.py
backend/app/pipeline/: events.py
backend/app/routers/: distributors.py  health.py  ingredients.py  restaurants.py  rfps.py  usage.py
backend/app/schemas/: distributors.py  ingredients.py  restaurants.py  rfps.py  usage.py
backend/app/services/: commodity_map.py  distributor_discovery.py  distributor_matching.py  email_sender.py  followup_agent.py  google_places.py  inbox_monitor.py  ingredient_enrichment.py  menu_parser.py  pricing_trends.py  quantity_aggregator.py  quote_parser.py  quote_pipeline.py  recommender.py  rfp_composer.py  rfp_pipeline.py  usda_ams.py  usda_fdc.py
backend/app/utils/: http_retry.py
backend/tests/: conftest.py  test_distributor_matching.py  test_distributor_matching_511.py  test_distributor_seed.py  test_email_sender.py  test_event_bus.py  test_followup_agent.py  test_google_places.py  test_health.py  test_inbox_monitor.py  test_menu_parser.py  test_pricing_trends.py  test_quantity_aggregator.py  test_quantity_aggregator_511.py  test_quote_parser.py  test_quote_pipeline.py  test_recommender.py  test_rfp_composer.py  test_rfp_pipeline.py  test_rfp_pipeline_511.py  test_usage.py  test_usda_ams.py  test_usda_fdc.py
data/: distributors_seed.json  seed_ams_prices.json
data/menus/: sweetgreen.html
docs/: spec.md
frontend/: .env.local.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  (+1 more)
scripts/: verify_ams_map.out.txt  verify_ams_map.py
(+16 files in other folders)
