[project]
name = "pathway-rfp-backend"
version = "0.1.0"
description = "Pathway RFP automation backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "structlog==24.4.0",
    "python-multipart==0.0.20",
    "anthropic==0.102.0",
    "beautifulsoup4==4.14.3",
    "lxml==6.1.0",
    "typer==0.25.1",
    "sse-starlette==3.0.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E", "F", "I", "N"]
"app/cli.py" = ["B008"]  # typer.Argument() in defaults is idiomatic
